@@ -1,3 +1,5 @@
+ * Using ${prefix}/bin/curl if available. Fixed test cases that failed when curl has SNI
+   support.
  * added test that resources are served with "503 Service Unavailable" while TLS credentials
    are still incomplete.
  * disabled a pkey encryption check since it did not work as is un *NIX, fixed gcc warning
